--- a/etc/skel/.config/neofetch/config.conf
+++ b/etc/skel/.config/neofetch/config.conf
@@ -23,8 +23,8 @@ print_info() {
     prin
     
     info "$(color 15)WM" wm
-    prin "$(color 15)├$(color 6) Bar" "Polybar"
-    prin "$(color 15)└$(color 6) Compositor" "Compton"
+    prin "$(color 15)├$(color 6) Panel" "lxqt-panel"
+    prin "$(color 15)└$(color 6) Compositor" "none"
 
     prin
 
