--- a/etc/skel/.config/alacritty/alacritty.yml
+++ b/etc/skel/.config/alacritty/alacritty.yml
@@ -8,7 +8,8 @@
 # References:
 #   https://github.com/alacritty/alacritty
 
-# background_opacity: 0.9
+window:
+   opacity: 0.97
 
 colors:
   primary:
@@ -28,7 +29,7 @@ colors:
     matches:
       foreground: CellBackground
       background: '#88c0d0'
-    bar:
+    colors.footer_bar:
       background: '#434c5e'
       foreground: '#d8dee9'
   normal:
